--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,8 @@ a.skip{
   -webkit-transition: top 1s ease-out;
   transition: left 1s ease-out;
   z-index: 1;
-  /* position: relative; */
-  /* right: 500px; */
+  position: relative;
+  right: 500px;
 }
 
 .container{
@@ -101,8 +101,8 @@ a.skip{
 }
 
 .intro{
-  background: #858585 url(../images/header.jpg);
-  /* background-image: url(../images/header.jpg); */
+  background: url(../images/header.jpg);
+  background-color: #DDDDDD, #858585, #707070, #B3B3B3;
   min-height: 400px;
   background-attachment: fixed;
   background-position: center;
@@ -162,7 +162,7 @@ img {
 }
 
 .text{
-  text-align: center;
+  align-self: center;
   max-height: 25vh;
   overflow: scroll;
 }
@@ -177,6 +177,13 @@ img {
   nav li{
     margin-left: 5%;
     margin-right:0;
+  }
+
+  a.skip:focus{
+    position: relative;
+    left: 0;
+    top: 20px;
+
   }
 
   .container{
