--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,8 @@ a:link{
   text-decoration: none;
 }
 
-a:focus{
-  border-top: 2px solid #ffff00;
-  }
-
 a:hover{
-  text-decoration: underline;
-  text-decoration-style: wavy;
+  text-decoration: underline wavy;
 }
 
 a.skip{
@@ -93,16 +88,19 @@ a.skip{
   right: 500px;
 }
 
+a:focus{
+  border-top: 2px solid #ffff00;
+  }
+
+
 .container{
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
-  grid-row-gap: 30px;
-
+  row-gap: 30px;
 }
 
-div.intro{
-  background-color: #DDDDDD, #858585, #707070, #B3B3B3;
-  background-image: url(../images/header.jpg);
+.intro{
+  background:  #707070 url(../images/header.jpg);
   min-height: 400px;
   background-attachment: fixed;
   background-position: center;
@@ -110,55 +108,47 @@ div.intro{
   background-size: cover;
 }
 
-img {
-  width: 100%;
-}
-
 .about{
-  grid-column: 2;
-  grid-row: 1;
+  grid-area: 1 / 2 / 1 / 2;
 }
 .about-image{
-  grid-column: 1/span 3;
+  grid-area: 1 / 1 / 1 / span 3;
   max-height: 500px;
   overflow: hidden;
-  grid-row: 1;
 }
 
 .clients{
-  grid-column: 2;
-  grid-row: 2;
+  grid-area: 2 / 2 / 2 / 2;
 }
 
 .clients-image{
-  grid-column: 1/span 3;
+  grid-area: 2 / 1 / 2 / span 3;
   max-height: 500px;
   overflow: hidden;
-  grid-row: 2;
 }
 
 .method{
-  grid-column: 2;
-  grid-row: 3;
+  grid-area: 3 / 2 / 3 / 2;
 }
 
 .method-image{
-  grid-column: 1/span 3;
+  grid-area: 3 / 1 / 3 / span 3;
   max-height: 500px;
   overflow: hidden;
-  grid-row: 3;
 }
 
 .contact{
-  grid-column: 2;
-  grid-row: 4;
+  grid-area: 4 / 2 / 4 / 2;
 }
 
 .contact-image{
-  grid-column: 1/span 3;
+  grid-area: 4 / 1 / 4 / span 3;
   max-height: 500px;
   overflow: hidden;
-  grid-row: 4;
+}
+
+img {
+  width: 100%;
 }
 
 .text{
@@ -167,11 +157,11 @@ img {
   overflow: scroll;
 }
 
+
 @media screen and (min-width: 700px){
   nav{
     padding-top: 35px;
     text-align: right;
-
   }
 
   nav li{
@@ -179,56 +169,23 @@ img {
     margin-right:0;
   }
 
-  a.skip:focus{
+  .skip:focus{
     position: relative;
     left: 0;
     top: 20px;
-
   }
 
   .container{
     grid-template-columns: 50px auto 500px auto 50px;
-    grid-template-rows: 300px 300px 300px 300px;
+    grid-template-rows: repeat(4, 300px);
   }
 
-  .about{
-    grid-column: 3/span 2;
-    grid-row: 1;
+  .about, .method, .clients-image, .contact-image{
+    grid-column: 3 / span 2;
   }
 
-  .method{
-    grid-column: 3/span 2;
-    grid-row: 3;
-  }
-
-  .clients{
-    grid-column: 2/span 2;
-    grid-row: 2;
-  }
-
-  .contact{
-    grid-column: 2/span 2;
-    grid-row: 4;
-  }
-
-  .clients-image{
-    grid-column: 3/span 2;
-    grid-row: 2;
-  }
-
-  .contact-image{
-    grid-column: 3/span 2;
-    grid-row: 4;
-  }
-
-  .about-image{
-    grid-column: 2/span 2;
-    grid-row: 1;
-  }
-
-  .method-image{
-    grid-column: 2/span 2;
-    grid-row: 3;
+  .clients, .contact, .about-image, .method-image{
+    grid-column: 2 / span 2;
   }
 
 }
@@ -236,9 +193,11 @@ img {
 
 
 
+
+
 /** Code for prefers reduced motion **/
 /* Make no changes below this line.
-   ***************************************
+   *************************************** 
    */
 @media screen and (prefers-reduced-motion: reduce){
   /*Turn off scroll*/
